# models/account.go
@@ -63,39 +63,3 @@ func (this *Account) Register(req requests.RequestRegister) error {
 	}
 	return nil
 }
-
-func (this *Account) RegisterForAdmin(req requests.RequestRegisterForAdmin) error {
-	if req.Type == "user" {
-		return this.Register(requests.RequestRegister{
-			Username: req.Username,
-			Pass:     req.Pass,
-			Name:     req.Name,
-			Phone:    req.Phone,
-			Email:    req.Email,
-			Image:    req.Image,
-			Gender:   req.Gender,
-		})
-	} else if req.Type == "admin" {
-		data, err := db.Prepare("INSERT INTO Admin(Name, Phone, Email, Image, Gender) VALUES(?, ?, ?, ?, ?);")
-		if err != nil {
-			return err
-		}
-		val, err := data.Exec(req.Name, req.Phone, req.Email, req.Image, req.Gender)
-		if err != nil {
-			return err
-		}
-
-		id, err := val.LastInsertId()
-
-		data, err = db.Prepare("INSERT INTO Account(Username, Pass, Id, type) VALUES(?, ?, ?, ?);")
-		if err != nil {
-			return err
-		}
-		_, err = data.Exec(req.Username, req.Pass, id, "admin")
-		if err != nil {
-			return err
-		}
-		return nil
-	}
-	return errors.New("account type not valid !")
-}
