# swagger/swagger.json
@@ -5,7 +5,7 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/account/": {
+        "/account/login": {
             "post": {
                 "tags": [
                     "account"
@@ -33,45 +33,6 @@
                     },
                     "404": {
                         "description": "{object} responses.ResponseSingle"
-                    }
-                }
-            }
-        },
-        "/account/auth": {
-            "post": {
-                "tags": [
-                    "account"
-                ],
-                "summary": "Tạo mới tài khoản",
-                "description": "Register For Admin",
-                "operationId": "AccountController.Register For Admin",
-                "parameters": [
-                    {
-                        "in": "header",
-                        "name": "token",
-                        "description": "Token",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "req",
-                        "description": "req",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/requests.RequestRegisterForAdmin"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/responses.ResponseBool"
-                        }
-                    },
-                    "404": {
-                        "description": "{object} responses.ResponseBool"
                     }
                 }
             }
@@ -127,9 +88,7 @@
                         "description": "{object} responses.ResponseArray"
                     }
                 }
-            }
-        },
-        "/category/auth": {
+            },
             "put": {
                 "tags": [
                     "category"
@@ -207,36 +166,6 @@
             }
         },
         "/product/": {
-            "get": {
-                "tags": [
-                    "product"
-                ],
-                "summary": "Lấy một sản phẩm",
-                "description": "Get Product",
-                "operationId": "ProductController.Get Product",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "pid",
-                        "description": "product id",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/responses.ResponseSingle"
-                        }
-                    },
-                    "404": {
-                        "description": "{object} responses.ResponseSingle"
-                    }
-                }
-            }
-        },
-        "/product/auth": {
             "put": {
                 "tags": [
                     "product"
@@ -323,6 +252,20 @@
                 "parameters": [
                     {
                         "in": "query",
+                        "name": "pos",
+                        "description": "pos",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
+                        "name": "count",
+                        "description": "count",
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "in": "query",
                         "name": "cateid",
                         "description": "cate id",
                         "type": "string"
@@ -340,14 +283,44 @@
                     }
                 }
             }
+        },
+        "/product/{pid}": {
+            "get": {
+                "tags": [
+                    "product"
+                ],
+                "summary": "Lấy một sản phẩm",
+                "description": "Get Product",
+                "operationId": "ProductController.Get Product",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "pid",
+                        "description": "product id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseSingle"
+                        }
+                    },
+                    "404": {
+                        "description": "{object} responses.ResponseSingle"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "253.0xc0004d22a0.false": {
+        "389.0xc00059b500.false": {
             "title": "false",
             "type": "object"
         },
-        "379.0xc0004d2330.false": {
+        "515.0xc00059b590.false": {
             "title": "false",
             "type": "object"
         },
@@ -513,36 +486,6 @@
                 }
             }
         },
-        "requests.RequestRegisterForAdmin": {
-            "title": "RequestRegisterForAdmin",
-            "type": "object",
-            "properties": {
-                "Email": {
-                    "type": "string"
-                },
-                "Gender": {
-                    "type": "string"
-                },
-                "Image": {
-                    "type": "string"
-                },
-                "Name": {
-                    "type": "string"
-                },
-                "Pass": {
-                    "type": "string"
-                },
-                "Phone": {
-                    "type": "string"
-                },
-                "Type": {
-                    "type": "string"
-                },
-                "Username": {
-                    "type": "string"
-                }
-            }
-        },
         "responses.Err": {
             "title": "Err",
             "type": "object",
@@ -561,7 +504,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/379.0xc0004d2330.false"
+                    "$ref": "#/definitions/515.0xc00059b590.false"
                 },
                 "error": {
                     "$ref": "#/definitions/responses.Err"
@@ -586,7 +529,7 @@
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/253.0xc0004d22a0.false"
+                    "$ref": "#/definitions/389.0xc00059b500.false"
                 },
                 "error": {
                     "$ref": "#/definitions/responses.Err"
